fix alignment problem

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 .page {
   max-width: 900px;
   min-height: 100vh;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
